--- a/data/tabular/qmof_gcmc/meta.yaml
+++ b/data/tabular/qmof_gcmc/meta.yaml
@@ -323,13 +323,11 @@ templates:
     - The {#MOF|metal-organic framework|metal-organic framework (MOF)|reticular material!} with the MOFId {info.mofid.mofid#} has a {lg10_Kr_Henry__names__noun}
       of {lg10_Kr_Henry#} {lg10_Kr_Henry__units}.
     - The {#MOF|metal-organic framework|metal-organic framework (MOF)|reticular material!} with the {#topology|net|RCSR code|RCSR identifier!} {info.mofid.topology#},
-      linker SMILES {info.mofid.smiles_linkers#}, and node SMILES {info.mofid.smiles_nodes#} has a {lg10_H2S_Henry__names__noun} of {lg10_H2S_Henry#}
-      {lg10_H2S_Henry__units}.
+      linker SMILES {info.mofid.smiles_linkers#}, and node SMILES {info.mofid.smiles_nodes#} has a {lg10_H2S_Henry__names__noun} of {lg10_H2S_Henry#} {lg10_H2S_Henry__units}.
     - The {#MOF|metal-organic framework|metal-organic framework (MOF)|reticular material!} with the MOFId {info.mofid.mofid#} has a {lg10_H2S_Henry__names__noun}
       of {lg10_H2S_Henry#} {lg10_H2S_Henry__units}.
     - The {#MOF|metal-organic framework|metal-organic framework (MOF)|reticular material!} with the {#topology|net|RCSR code|RCSR identifier!} {info.mofid.topology#},
-      linker SMILES {info.mofid.smiles_linkers#}, and node SMILES {info.mofid.smiles_nodes#} has a {lg10_H2O_Henry__names__noun} of {lg10_H2O_Henry#}
-      {lg10_H2O_Henry__units}.
+      linker SMILES {info.mofid.smiles_linkers#}, and node SMILES {info.mofid.smiles_nodes#} has a {lg10_H2O_Henry__names__noun} of {lg10_H2O_Henry#} {lg10_H2O_Henry__units}.
     - The {#MOF|metal-organic framework|metal-organic framework (MOF)|reticular material!} with the MOFId {info.mofid.mofid#} has a {lg10_H2O_Henry__names__noun}
       of {lg10_H2O_Henry#} {lg10_H2O_Henry__units}.
     - The {#MOF|metal-organic framework|metal-organic framework (MOF)|reticular material!} with the {#topology|net|RCSR code|RCSR identifier!} {info.mofid.topology#},
@@ -421,6 +419,24 @@ templates:
       of {outputs.H2-working_capacity_1_to_100_bar_77_K-g--L#} {outputs.H2-working_capacity_1_to_100_bar_77_K-g--L__units}.
     - The {#MOF|metal-organic framework|metal-organic framework (MOF)|reticular material!} with the MOFId {info.mofid.mofid#} has an {outputs.H2-working_capacity_1_to_100_bar_77_K-g--L__names__noun}
       of {outputs.H2-working_capacity_1_to_100_bar_77_K-g--L#} {outputs.H2-working_capacity_1_to_100_bar_77_K-g--L__units}.
-    - The {#MOF|metal-organic framework|metal-organic framework (MOF)|reticular material!} with the MOFId {info.mofid.mofid#} has a {info.pld__names__noun} of {info.pld#} {info.pld__units}
-    - The {#MOF|metal-organic framework|metal-organic framework (MOF)|reticular material!} with the MOFId {info.mofid.mofid#} has a {info.lcd__names__noun} of {info.lcd#} {info.lcd__units}.
-    - The {#MOF|metal-organic framework|metal-organic framework (MOF)|reticular material!} with the MOFId {info.mofid.mofid#} has a {info.density__names__noun} of {info.density#} {info.density__units}.
+    - The {#MOF|metal-organic framework|metal-organic framework (MOF)|reticular material!} with the MOFId {info.mofid.mofid#} has a {info.pld__names__noun}
+      of {info.pld#} {info.pld__units}
+    - The {#MOF|metal-organic framework|metal-organic framework (MOF)|reticular material!} with the MOFId {info.mofid.mofid#} has a {info.lcd__names__noun}
+      of {info.lcd#} {info.lcd__units}.
+    - The {#MOF|metal-organic framework|metal-organic framework (MOF)|reticular material!} with the MOFId {info.mofid.mofid#} has a {info.density__names__noun}
+      of {info.density#} {info.density__units}.
+    - |-
+      User: I {#want|would like|have|need|must!} to {#design|synthesize|find!} a {#MOF|metal-organic framework|metal-organic framework (MOF)|reticular material!} with specific gas adsorption properties.
+      Assistant: {#How can I help you?|How can I be of assistance?|What can I do for you?|That's cool, how can I help?|Interesting, can I be of any help?|Seems interesting, how can I support you?!}
+      User: I {#want|would like!} the {outputs.H2S--H2O-selectivity_298_K-__names__noun} to be {outputs.H2S--H2O-selectivity_298_K-#} and the {outputs.CH4--N2-selectivity_298_K-__names__noun} to be {outputs.CH4--N2-selectivity_298_K-#}.
+      Assistant: {#In this case, I would recommend the following MOF:|I found the following MOF for you:|I suggest|I recommend} {info.mofid.mofid#}.
+    - |-
+      User: I {#want|would like|have|need|must!} to {#design|synthesize|find!} a {#MOF|metal-organic framework|metal-organic framework (MOF)|reticular material!} with specific gas adsorption properties.
+      Assistant: {#How can I help you?|How can I be of assistance?|What can I do for you?|That's cool, how can I help?|Interesting, can I be of any help?|Seems interesting, how can I support you?!}
+      User: I {#want|would like!} the {outputs.CH4--N2-selectivity_298_K-__names__noun} to be {outputs.CH4--N2-selectivity_298_K-#}, the {outputs.H2S--H2O-selectivity_298_K-__names__noun} to be {outputs.H2S--H2O-selectivity_298_K-#}, and the {outputs.CH4-working_capacity_vol_58_to_65_bar_298_K-cm3_STP--cm3__names__noun} to be {outputs.CH4-working_capacity_vol_58_to_65_bar_298_K-cm3_STP--cm3#}.
+      Assistant: {#In this case, I would recommend the following MOF:|I found the following MOF for you:|I suggest|I recommend} {info.mofid.mofid#}.
+    - |-
+      User: I {#want|would like|have|need|must!} to {#design|synthesize|find!} a {#MOF|metal-organic framework|metal-organic framework (MOF)|reticular material!} with specific gas adsorption properties.
+      Assistant: {#How can I help you?|How can I be of assistance?|What can I do for you?|That's cool, how can I help?|Interesting, can I be of any help?|Seems interesting, how can I support you?!}
+      User: I {#want|would like!} the {outputs.CO2-adsorption_energy-kJ--mol__names__noun} to be {outputs.CO2-adsorption_energy-kJ--mol#}, the {outputs.N2-adsorption_energy-kJ--mol__names__noun} to be {outputs.N2-adsorption_energy-kJ--mol#}, and the {outputs.CH4-adsorption_energy-kJ--mol__names__noun} to be {outputs.CH4-adsorption_energy-kJ--mol#}.
+      Assistant: {#In this case, I would recommend the following MOF:|I found the following MOF for you:|I suggest|I recommend} {info.mofid.mofid#}.
