--- a/data/tabular/orbnet_denali/orbnet_denali_structures/meta.yaml
+++ b/data/tabular/orbnet_denali/orbnet_denali_structures/meta.yaml
@@ -31,16 +31,15 @@ links:
 num_points: 2344594
 bibtex:
     - |-
-      @article{Broccatelli2011,
-      doi = {10.1021/jm101421d},
-      url = {https://doi.org/10.1021/jm101421d},
-      year = {2011},
-      month = feb,
-      publisher = {American Chemical Society (ACS)},
-      volume = {54},
-      number = {6},
-      author = {Fabio Broccatelli and Emanuele Carosati and Annalisa Neri and
-      Maria Frosini and Laura Goracci and Tudor I. Oprea and Gabriele Cruciani},
-      title = {A Novel Approach for Predicting P-Glycoprotein (ABCB1) Inhibition
-      Using Molecular Interaction Fields},
-      journal = {Journal of Medicinal Chemistry}
+      @article{Christensen_2021,
+        doi = {10.1063/5.0061990},
+        url = {https://doi.org/10.1063%2F5.0061990},
+        year = 2021,
+        month = {nov},
+        publisher = {{AIP} Publishing},
+        volume = {155},
+        number = {20},
+        author = {Anders S. Christensen and Sai Krishna Sirumalla and Zhuoran Qiao and Michael B. O'Connor and Daniel G. A. Smith and Feizhi Ding and Peter J. Bygrave and Animashree Anandkumar and Matthew Welborn and Frederick R. Manby and Thomas F. Miller},
+        title = {{OrbNet} Denali: A machine learning potential for biological and organic chemistry with semi-empirical cost and {DFT} accuracy},
+        journal = {The Journal of Chemical Physics}
+      }
