--- a/data/tabular/orbnet_denali/meta.yaml
+++ b/data/tabular/orbnet_denali/meta.yaml
@@ -3,7 +3,7 @@ name: orbnet_denali_structures
 description: |-
     Structures (including conformers, protomers, ...) of structures.
     Has been used for training of OrbNet Denali.
-labels:
+targets:
     - id: charge
       type: ordinal
       description: integer charge of the molecule
@@ -49,7 +49,7 @@ links:
       md5: bc9b612f75373d1d191ce7493eebfd62
     - url: https://figshare.com/articles/dataset/OrbNet_Denali_Training_Data/14883867?file=28672248
       description: data source
-num_points: 1053275
+num_points: 1050713
 bibtex:
     - |-
       @article{Christensen_2021,
