Add SAFE representation (#482)
Co-authored-by: Kevin Maik Jablonka <kevin.jablonka@epfl.ch>
Co-authored-by: Kevin M Jablonka <32935233+kjappelbaum@users.noreply.github.com>

--- a/.github/workflows/install.yaml
+++ b/.github/workflows/install.yaml
@@ -14,7 +14,7 @@ jobs:
               with:
                   environment-file: conda.yaml
                   activate-environment: chemnlp
-                  python-version: 3.8
+                  python-version: 3.9
                   auto-update-conda: true
                   auto-activate-base: false
             - name: Validate yaml
@@ -22,3 +22,8 @@ jobs:
               run: |
                   conda activate chemnlp
                   python -m src.chemnlp.data_val.validate data
+            - name: Tests
+              shell: bash -l {0}
+              run: |
+                  pip install pytest
+                  pytest tests
