--- a/data/tabular/odd_one_out/meta.yaml
+++ b/data/tabular/odd_one_out/meta.yaml
@@ -1,23 +1,23 @@
 ---
 name: odd_one_out
 description: |-
-  Tanimoto distance between Morgan fingerprints of SMILES in the ZINC dataset.
-  We performed filtering to exclude sequences of molecules where there is no strong difference.
+    Tanimoto distance between Morgan fingerprints of SMILES in the ZINC dataset.
+    We performed filtering to exclude sequences of molecules where there is no strong difference.
 targets:
     - id: smallest_similarities
       type: continuous
       description: smallest Tanimoto similarity between Morgan fingerprints
       names:
-        - noun: smallest Tanimoto similarity between Morgan fingerprints
+          - noun: smallest Tanimoto similarity between Morgan fingerprints
     - id: biggest_similarities
       type: continuous
       description: largest Tanimoto similarity between Morgan fingerprints
       names:
-        - noun: largest Tanimoto similarity between Morgan fingerprints
+          - noun: largest Tanimoto similarity between Morgan fingerprints
 benchmarks:
-  - name: TDC
-    link: https://tdcommons.ai/
-    split_column:  split
+    - name: TDC
+      link: https://tdcommons.ai/
+      split_column: split
 identifiers:
     - id: smi_1
       type: SMILES
@@ -39,12 +39,12 @@ identifiers:
       type: SMILES
     - id: biggest_sim_1
       type: SMILES
-      description: SMILES 
+      description: SMILES
     - id: most_diff_0
-      type: SMILES 
+      type: SMILES
       description: SMILES
     - id: most_diff_1
-      type: SMILES 
+      type: SMILES
       description: SMILES
 license: MIT
 num_points: 98715
@@ -59,30 +59,35 @@ bibtex:
         volume = {60},
         number = {12},
         pages = {6065--6073},
-        author = {John J. Irwin and Khanh G. Tang and Jennifer Young and Chinzorig Dandarchuluun 
+        author = {John J. Irwin and Khanh G. Tang and Jennifer Young and Chinzorig Dandarchuluun
         and Benjamin R. Wong and Munkhzul Khurelbaatar and Yurii S. Moroz and John Mayfield and Roger A. Sayle},
         title = {{ZINC}20{\textemdash}A Free Ultralarge-Scale Chemical Database for Ligand Discovery},
         journal = {J. Chem. Inf. Model.}
       }
 templates:
-  - |- 
-    Task: You are given a {#list|sequence!} of SMILES of {#molecules|chemicals|chemical compounds!} and {#must|are asked to!} find the {#molecule|chemical|compound!} that is {#most|maximally!} different from the others.
-    Molecules: {smi_1#}, {smi_2#}, {smi_3#}, and {smi_4#}
-    Constraint: Answer by returning the SMILES string. Similarity is measured in terms of Tanimoto distance between Morgan fingerprints of radius {#two|2!}.
-    Answer: {odd_one_out_mol#}
-  - |- 
-    Task: You are given a {#list|sequence!} of SMILES of {#molecules|chemicals|chemical compounds!} and {#must|are asked to!} find the pair {#molecule|chemical|compound!} that is {#most|maximally!} different from each other.
-    Molecules: {smi_1#}, {smi_2#}, {smi_3#}, and {smi_4#}
-    Constraint: Answer by returning two SMILES strings separated by a comma. Similarity is measured in terms of Tanimoto distance between Morgan fingerprints of radius {#two|2!}.
-    Answer: {most_diff_0#}, {most_diff_1#}
-  - |- 
-    Task: You are given a {#list|sequence!} of SMILES of {#molecules|chemicals|chemical compounds!} and {#must|are asked to!} find the pair {#molecule|chemical|compound!} that is {#most|maximally!} similar to each other.
-    Molecules: {smi_1#}, {smi_2#}, {smi_3#}, and {smi_4#}
-    Constraint: Answer by returning two SMILES strings separated by a comma. Similarity is measured in terms of Tanimoto distance between Morgan fingerprints of radius {#two|2!}.
-    Answer: {biggest_sim_1#}, {biggest_sim_0#}
-  - |- 
-    Question: I have a {#list|sequence!} of SMILES for {#molecules|chemicals|chemical compounds!}: {smi_1#}, {smi_2#}, {smi_3#}, and {smi_4#}. Which two molecules have the highest similarity based on their Tanimoto distance calculated from Morgan fingerprints of radius {#two|2!}?
-    Answer: The two most similar molecules are {biggest_sim_1#} and {biggest_sim_0#}.
-  - |- 
-    Question: I have the following SMILES strings: {smi_1#}, {smi_2#}, {smi_3#}, and {smi_4#}. Which {#molecule|chemical|chemical compound|compound!} is the most {#dissimilar|different!} from the others based on Tanimoto distance of their Morgan fingerprints of radius {#two|2!}?
-    Answer: The most dissimilar {#molecule|chemical|chemical compound|compound!} is {odd_one_out_mol#}.
+    - |-
+      Task: You are given a {#list|sequence!} of SMILES of {#molecules|chemicals|chemical compounds!} and {#must|are asked to!} find the {#molecule|chemical|compound!} that is {#most|maximally!} different from the others.
+      Molecules: {smi_1#}, {smi_2#}, {smi_3#}, and {smi_4#}
+      Constraint: Answer by returning the SMILES string. Similarity is measured in terms of Tanimoto distance between Morgan fingerprints of radius {#two|2!}.
+      Answer: {odd_one_out_mol#}
+    - |-
+      Task: You are given a {#list|sequence!} of SMILES of {#molecules|chemicals|chemical compounds!} and {#must|are asked to!} find the pair {#molecule|chemical|compound!} that is {#most|maximally!} different from each other.
+      Molecules: {smi_1#}, {smi_2#}, {smi_3#}, and {smi_4#}
+      Constraint: Answer by returning two SMILES strings separated by a comma. Similarity is measured in terms of Tanimoto distance between Morgan fingerprints of radius {#two|2!}.
+      Answer: {most_diff_0#}, {most_diff_1#}
+    - |-
+      Task: You are given a {#list|sequence!} of SMILES of {#molecules|chemicals|chemical compounds!} and {#must|are asked to!} find the pair {#molecule|chemical|compound!} that is {#most|maximally!} similar to each other.
+      Molecules: {smi_1#}, {smi_2#}, {smi_3#}, and {smi_4#}
+      Constraint: Answer by returning two SMILES strings separated by a comma. Similarity is measured in terms of Tanimoto distance between Morgan fingerprints of radius {#two|2!}.
+      Answer: {biggest_sim_1#}, {biggest_sim_0#}
+    - |-
+      Question: I have a {#list|sequence!} of SMILES for {#molecules|chemicals|chemical compounds!}: {smi_1#}, {smi_2#}, {smi_3#}, and {smi_4#}. Which two molecules have the highest similarity based on their Tanimoto distance calculated from Morgan fingerprints of radius {#two|2!}?
+      Answer: The two most similar molecules are {biggest_sim_1#} and {biggest_sim_0#}.
+    - |-
+      Question: I have the following SMILES strings: {smi_1#}, {smi_2#}, {smi_3#}, and {smi_4#}. Which {#molecule|chemical|chemical compound|compound!} is the most {#dissimilar|different!} from the all others based on Tanimoto distance of their Morgan fingerprints of radius {#two|2!}?
+      Answer: The most dissimilar {#molecule|chemical|chemical compound|compound!} is {odd_one_out_mol#}.
+    - |-
+      User: I have the following SMILES strings: {smi_1#}, {smi_2#}, {smi_3#}, and {smi_4#}. Which is the odd one in this list?
+      Assistant: {#Interesting question, what do you|Interesting, what do you|Cool, what do you|What do you!} {#mean by|understand as!} "odd one"?
+      User: {#For now, we|Let's assume we|We!} measure similarity in terms of Tanimoto distance between Morgan fingerprints of radius two. The "odd one" is the molecule that is most different from the others.
+      Assistant: {#In that case,|Then,!} I {#think|believe|propose!} that {odd_one_out_mol#} is the "odd one" you're looking for.
